v5.1.0/_sources/generated/pcdsdevices.lamp_motion.LAMP_LV_17.rst.txt
pcdsdevices.lamp\_motion.LAMP\_LV\_17
=====================================

.. currentmodule:: pcdsdevices.lamp_motion

.. autoclass:: LAMP_LV_17

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - gas_jet_x
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:01``
          - 
          - normal
          - 
    
        * - gas_jet_y
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:02``
          - 
          - normal
          - 
    
        * - gas_jet_z
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:03``
          - 
          - normal
          - 
    
        * - sample_paddle_x
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:04``
          - 
          - normal
          - 
    
        * - sample_paddle_y
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:05``
          - 
          - normal
          - 
    
        * - sample_paddle_z
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:06``
          - 
          - normal
          - 
    
        * - detector_x
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:07``
          - 
          - normal
          - 
    
        * - detector_y
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:08``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    
    